# kirigami_tessellations

./: README.md
code/: .gitignore  CMakeLists.txt  index.html  kiri_patterns.js  kiri_patterns.wasm  package.json  style.css  sw.js
code/cpp/: Hmesh.cpp  Hmesh.h  bind.cpp  conversions.h  kiri_mesh.cpp  kiri_mesh.h  multi_grid.cpp  multi_grid.h  state.cpp  state.h  sym_pattern.cpp  sym_pattern.h  utils.cpp  utils.h
code/cpp/opt/: opt.cpp  opt.h
code/cpp/parameterization/: lift.cpp  lift.h  param.cpp  param.h
code/data/patterns/: arrow.json  diamond.json  fig13_col1.json  fig13_col2.json  fig13_col3.json  fig13_col4.json  fig13_col5.json  fig13_col6.json  hexagon_triangle.json  p1.json  p2.json  p3.json  p4.json  p5.json  triangle_auxetic.json  waterbomb.json
code/js/: algorithm-module.js  app.js  design-module.js  preview-module.js
